[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_ML_nodes"
version = "0.3.0"
description = "ComfyUI custom nodes for image/video processing, frame rate conversion, and OpenPose skeleton processing"
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "Pillow>=10.0.0",
    "opencv-python>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.comfy]
PublisherId = "your_username"
DisplayName = "ML Nodes (Image/Video/OpenPose Processing)"
Icon = ""
Tags = ["image", "video", "save", "metadata", "framerate", "gpu", "openpose", "skeleton"]
Repository = "https://github.com/your_username/comfyui_ML_nodes"
includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 140
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "W293",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
